[gd_scene load_steps=2 format=3 uid="uid://c8p4u5yqjbqx4"]

[ext_resource type="Script" uid="uid://dlvrm55417gx8" path="res://addons/godot_core_system/examples/input_demo/input_buffer/buffer_demo.gd" id="1_yvxu8"]

[node name="BufferDemo" type="CanvasLayer"]
script = ExtResource("1_yvxu8")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 46.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "输入缓冲系统演示"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 120.0
text = "输入缓冲系统就绪"

[node name="BufferDisplay" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 120.0
offset_top = 136.0
offset_right = 320.0
offset_bottom = 236.0
grow_horizontal = 2
text = "当前缓冲："
horizontal_alignment = 1

[node name="InputLog" type="TextEdit" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -106.0
offset_right = 112.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
text = "输入日志"
editable = false

[node name="Controls" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -148.0
offset_right = 216.0
offset_bottom = -28.0
grow_vertical = 0
metadata/_edit_group_ = true

[node name="BufferWindow" type="VBoxContainer" parent="UI/Controls"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Controls/BufferWindow"]
layout_mode = 2
text = "缓冲窗口 (秒)"

[node name="Slider" type="HSlider" parent="UI/Controls/BufferWindow"]
layout_mode = 2
max_value = 0.5
step = 0.01
value = 0.15

[node name="Value" type="Label" parent="UI/Controls/BufferWindow"]
layout_mode = 2
text = "0.15"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="UI/Controls"]
layout_mode = 2
alignment = 1

[node name="ClearLogButton" type="Button" parent="UI/Controls/Buttons"]
layout_mode = 2
text = "清除日志"

[node name="ResetButton" type="Button" parent="UI/Controls/Buttons"]
layout_mode = 2
text = "重置参数"

[node name="Instructions" type="Label" parent="UI"]
layout_mode = 0
offset_left = 424.0
offset_top = 8.0
offset_right = 568.0
offset_bottom = 187.0
theme_override_font_sizes/font_size = 10
text = "操作说明：
空格键：技能1 (红色)
回车键：技能2 (蓝色)
Tab键：技能3 (绿色)

技能有0.5秒冷却时间
在冷却结束时会检查缓冲"

[connection signal="value_changed" from="UI/Controls/BufferWindow/Slider" to="." method="_on_buffer_window_value_changed"]
[connection signal="pressed" from="UI/Controls/Buttons/ClearLogButton" to="." method="_on_clear_log_pressed"]
[connection signal="pressed" from="UI/Controls/Buttons/ResetButton" to="." method="_on_reset_pressed"]
